--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -3,23 +3,23 @@ skin: sea # default, night, plum, sea, soft, steel
 
 # Theme Text
 t:
-  skip_links: "Skip links"
-  skip_primary_nav: "Skip to primary navigation"
-  skip_content: "Skip to content"
-  skip_footer: "Skip to footer"
-  menu: "Menu"
+  skip_links: "跳转链接Skip links"
+  skip_primary_nav: "转到主导航 Skip to primary navigation"
+  skip_content: "转到内容页Skip to content"
+  skip_footer: "转到页脚Skip to footer"
+  menu: "菜单Menu"
   search: "Search"
   site_search: "Site Search"
   results_found: "Result(s) found"
   search_placeholder_text: "Enter your search term..."
-  home: "Home"
+  home: "主页Home"
   newer: "Newer"
   older: "Older"
   email: "Email"
-  subscribe: "Subscribe"
-  read_more: "Read More"
-  posts: "Posts"
-  page: "Page"
+  subscribe: "订阅Subscribe"
+  read_more: "阅读更多Read More"
+  posts: "文章Posts"
+  page: "页面Page"
   of: "of"
   min_read: "min read"
   present: "Present"
