--- a/example/_config.yml
+++ b/example/_config.yml
@@ -25,7 +25,7 @@ author:
   picture: /assets/images/johndoe.png
 twitter_username: Towlette_Pettetucci
 github_username: Towlette_Pettetucci
-logo:  "/assets/images/xiao xiang.jpg" 
+logo:  /assets/icons/basically-basic-logo-light.svg
 search: true
 search_full_content: true
 search_provider: algolia
